[package]
name = "pbsys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tpsys"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
libloading = "0.7"

log = "0.4.0"
env_logger = "0.9"

widestring = "0.5.1"

rust_decimal = "1.24"
rust_decimal_macros = "1.24"


# [dependencies.windows]
# version = "0.35.0"
# features = ["Win32_Graphics_Gdi","Win32_Foundation",]